# amzn-mtg-beat-the-resellers

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/amazon_monitor/: __init__.py  exceptions.py  main.py
src/amazon_monitor/amazon/: auth.py  checkout.py  product.py
src/amazon_monitor/cli/: __init__.py  encrypt_password.py
src/amazon_monitor/config/: settings.py
src/amazon_monitor/core/: monitor.py
src/amazon_monitor/security/: encryption.py  password_manager.py  secure_string.py
src/amazon_monitor/utils/: cookies.py
templates/: cart.html  checkout.html  product.html
tests/: conftest.py
tests/integration/: test_full_integration.py  test_login_flow.py
tests/unit/: test_auth.py  test_checkout.py  test_config.py  test_cookies.py  test_encryption.py  test_monitor.py  test_product.py
